# todo_app

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
tests/: test_core.py
todo_app/: core.py  gui.py
