[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Kenneth Chua <cloudberry2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
ruff = "^0.14.8"
mypy = "^1.19.0"
bandit = "^1.9.2"
pre-commit = "^4.5.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
strict = true

[tool.bandit]
skips = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
